--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
   ],
   "devDependencies": {
     "@types/jest": "^23.1.1",
-    "canvas-prebuilt": "^1.6.5-prerelease.1",
+    "canvas": "^2.6.1",
     "del": "^3.0.0",
     "del-cli": "^1.1.0",
     "husky": "^0.14.3",
     "jest": "^23.1.0",
+    "jest-canvas-mock": "^2.2.0",
     "lint-staged": "^7.2.0",
     "prettier": "^1.14.0",
     "rollup": "^0.61.2",
@@ -65,6 +66,7 @@
     ]
   },
   "jest": {
+    "setupFiles": ["jest-canvas-mock"],
     "moduleFileExtensions": [
       "ts",
       "js"
