--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "ts-jest": "^22.4.6",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.14.0",
-    "typescript": "^2.9.2"
+    "typescript": "^3.7.0"
   },
   "husky": {
     "hooks": {
@@ -66,7 +66,9 @@
     ]
   },
   "jest": {
-    "setupFiles": ["jest-canvas-mock"],
+    "setupFiles": [
+      "jest-canvas-mock"
+    ],
     "moduleFileExtensions": [
       "ts",
       "js"
