--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,7 +20,7 @@ jobs:
     - run: npm install
     - run: npm run build --if-present
     - run: npm test
-    - run: npm config set //registry.npmjs.org/:_authToken ${{NPM_AUTHTOKEN}}
+    - run: npm config set //registry.npmjs.org/:_authToken ${{secrets.NPM_AUTHTOKEN}}
     - run: npm publish
       env:
         CI: true
