--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "xestando_signature_pad",
   "description": "Library for drawing smooth signatures.",
-  "version": "3.0.0-beta.6",
-  "homepage": "https://github.com/szimek/signature_pad",
+  "version": "3.0.0-beta.7",
+  "homepage": "https://github.com/javyxx/signature_pad",
   "author": {
-    "name": "Szymon Nowak",
-    "email": "szimek@gmail.com",
-    "url": "https://github.com/szimek"
+    "name": "Javier Ledo",
+    "email": "javyxx@gmail.com",
+    "url": "https://github.com/javyxx"
   },
   "license": "MIT",
   "source": "src/signature_pad.ts",
@@ -16,7 +16,7 @@
   "umd:main": "dist/signature_pad.umd.js",
   "types": "dist/types/signature_pad.d.ts",
   "scripts": {
-    "build": "del dist && rollup --config && mkdir dist/types && mv dist/*.d.ts dist/types && cp dist/signature_pad.umd.js docs/js/",
+    "build": "del dist && rollup --config && cd dist && mkdir types && cd .. && mv dist/*.d.ts dist/types && cp dist/signature_pad.umd.js docs/js/",
     "format": "prettier --write '{src,tests}/**/*.{js,ts}'",
     "lint": "tslint -c tslint.json '{src,tests}/**/*.ts'",
     "prepublishOnly": "yarn run build",
