--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xestando_signature_pad",
   "description": "Library for drawing smooth signatures.",
-  "version": "3.0.0-beta.7",
+  "version": "3.0.0-beta.8",
   "homepage": "https://github.com/javyxx/signature_pad",
   "author": {
     "name": "Javier Ledo",
@@ -16,7 +16,7 @@
   "umd:main": "dist/signature_pad.umd.js",
   "types": "dist/types/signature_pad.d.ts",
   "scripts": {
-    "build": "del dist && rollup --config && cd dist && mkdir types && cd .. && mv dist/*.d.ts dist/types && cp dist/signature_pad.umd.js docs/js/",
+    "build": "rimraf dist && rollup --config && mv dist/src dist/types && cp dist/signature_pad.umd.js docs/js/",
     "format": "prettier --write '{src,tests}/**/*.{js,ts}'",
     "lint": "tslint -c tslint.json '{src,tests}/**/*.ts'",
     "prepublishOnly": "yarn run build",
@@ -36,22 +36,21 @@
   "devDependencies": {
     "@types/jest": "^23.1.1",
     "canvas": "^2.6.1",
-    "del": "^3.0.0",
-    "del-cli": "^1.1.0",
     "husky": "^0.14.3",
     "jest": "^23.1.0",
     "jest-canvas-mock": "^2.2.0",
     "lint-staged": "^7.2.0",
     "prettier": "^1.14.0",
-    "rollup": "^0.61.2",
-    "rollup-plugin-terser": "^1.0.1",
-    "rollup-plugin-tslint": "^0.1.34",
-    "rollup-plugin-typescript2": "^0.15.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.0.3",
+    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-tslint": "^0.2.2",
+    "rollup-plugin-typescript2": "^0.26.0",
     "serve": "^9.1.0",
     "ts-jest": "^22.4.6",
-    "tslint": "^5.11.0",
+    "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.14.0",
-    "typescript": "^3.7.0"
+    "typescript": "^3.8.3"
   },
   "husky": {
     "hooks": {
